--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "[128 rows x 235 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 126,
    "metadata": {
     "_uuid": "0af4f5327f2a2586cb84902191b4a5dceb92153c"
    },
@@ -532,7 +532,7 @@
        "[232 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "[232 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 128,
    "metadata": {
     "_uuid": "8be756e892be69a199b89723f98dba55752a7a55"
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 129,
    "metadata": {
     "_uuid": "f9037b8d200b19c761b3b717833b81546bfb8e33"
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 130,
    "metadata": {
     "_uuid": "21e1d20219e13720f6a29dd25a051dde2e01da67"
    },
@@ -726,7 +726,7 @@
        "              dtype='datetime64[ns]', name='TIME', length=232, freq=None)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 131,
    "metadata": {
     "_uuid": "63adea04b52c7067b14cb586a31d9ff69d72762c"
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 132,
    "metadata": {
     "_uuid": "d22ad1e3ef991f9ec7d2b1b6e0b1a125d52457ec"
    },
@@ -760,7 +760,7 @@
        "Text(0.5, 1.0, 'Average Food Prices(₺)')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
        "Name: Value, Length: 232, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 134,
    "metadata": {
     "_uuid": "eccc75ed1a4ab62ae4fdc8c6f00e5077425e50c6"
    },
@@ -835,7 +835,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 135,
    "metadata": {
     "_uuid": "cf5aca1a9ac24cccc41b60e3193a37818af7bf21"
    },
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -917,45 +917,45 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize aic\n",
-      " ARIMA(1,1,1)(0,1,1)[12]             : AIC=127.238, Time=0.74 sec\n",
-      " ARIMA(0,1,0)(0,1,0)[12]             : AIC=240.186, Time=0.07 sec\n",
-      " ARIMA(1,1,0)(1,1,0)[12]             : AIC=142.588, Time=0.22 sec\n",
-      " ARIMA(0,1,1)(0,1,1)[12]             : AIC=191.334, Time=0.30 sec\n",
-      " ARIMA(1,1,1)(0,1,0)[12]             : AIC=129.449, Time=0.18 sec\n",
+      " ARIMA(1,1,1)(0,1,1)[12]             : AIC=127.238, Time=0.56 sec\n",
+      " ARIMA(0,1,0)(0,1,0)[12]             : AIC=240.186, Time=0.04 sec\n",
+      " ARIMA(1,1,0)(1,1,0)[12]             : AIC=142.588, Time=0.19 sec\n",
+      " ARIMA(0,1,1)(0,1,1)[12]             : AIC=191.334, Time=0.27 sec\n",
+      " ARIMA(1,1,1)(0,1,0)[12]             : AIC=129.449, Time=0.17 sec\n",
       " ARIMA(1,1,1)(1,1,1)[12]             : AIC=126.115, Time=0.91 sec\n",
-      " ARIMA(1,1,1)(1,1,0)[12]             : AIC=126.817, Time=0.57 sec\n",
-      " ARIMA(1,1,1)(2,1,1)[12]             : AIC=128.066, Time=3.20 sec\n",
-      " ARIMA(1,1,1)(1,1,2)[12]             : AIC=127.763, Time=4.62 sec\n",
-      " ARIMA(1,1,1)(0,1,2)[12]             : AIC=129.234, Time=1.75 sec\n",
-      " ARIMA(1,1,1)(2,1,0)[12]             : AIC=127.999, Time=1.03 sec\n",
-      " ARIMA(1,1,1)(2,1,2)[12]             : AIC=126.270, Time=5.06 sec\n",
-      " ARIMA(0,1,1)(1,1,1)[12]             : AIC=192.553, Time=0.52 sec\n",
-      " ARIMA(1,1,0)(1,1,1)[12]             : AIC=142.752, Time=0.44 sec\n",
-      " ARIMA(2,1,1)(1,1,1)[12]             : AIC=126.643, Time=1.17 sec\n",
-      " ARIMA(1,1,2)(1,1,1)[12]             : AIC=126.964, Time=0.97 sec\n",
-      " ARIMA(0,1,0)(1,1,1)[12]             : AIC=240.893, Time=0.33 sec\n",
-      " ARIMA(0,1,2)(1,1,1)[12]             : AIC=146.988, Time=0.73 sec\n",
-      " ARIMA(2,1,0)(1,1,1)[12]             : AIC=131.613, Time=0.70 sec\n",
-      " ARIMA(2,1,2)(1,1,1)[12]             : AIC=125.851, Time=1.45 sec\n",
-      " ARIMA(2,1,2)(0,1,1)[12]             : AIC=126.079, Time=1.19 sec\n",
-      " ARIMA(2,1,2)(1,1,0)[12]             : AIC=126.055, Time=1.05 sec\n",
-      " ARIMA(2,1,2)(2,1,1)[12]             : AIC=127.759, Time=4.29 sec\n",
-      " ARIMA(2,1,2)(1,1,2)[12]             : AIC=inf, Time=5.50 sec\n",
-      " ARIMA(2,1,2)(0,1,0)[12]             : AIC=128.537, Time=0.37 sec\n",
-      " ARIMA(2,1,2)(0,1,2)[12]             : AIC=124.145, Time=4.29 sec\n",
-      " ARIMA(1,1,2)(0,1,2)[12]             : AIC=127.769, Time=3.02 sec\n",
-      " ARIMA(2,1,1)(0,1,2)[12]             : AIC=127.166, Time=3.99 sec\n",
-      " ARIMA(3,1,2)(0,1,2)[12]             : AIC=115.650, Time=5.40 sec\n",
+      " ARIMA(1,1,1)(1,1,0)[12]             : AIC=126.817, Time=0.44 sec\n",
+      " ARIMA(1,1,1)(2,1,1)[12]             : AIC=128.066, Time=3.54 sec\n",
+      " ARIMA(1,1,1)(1,1,2)[12]             : AIC=127.763, Time=5.42 sec\n",
+      " ARIMA(1,1,1)(0,1,2)[12]             : AIC=129.234, Time=1.96 sec\n",
+      " ARIMA(1,1,1)(2,1,0)[12]             : AIC=127.999, Time=1.20 sec\n",
+      " ARIMA(1,1,1)(2,1,2)[12]             : AIC=126.270, Time=5.45 sec\n",
+      " ARIMA(0,1,1)(1,1,1)[12]             : AIC=192.553, Time=0.58 sec\n",
+      " ARIMA(1,1,0)(1,1,1)[12]             : AIC=142.752, Time=0.56 sec\n",
+      " ARIMA(2,1,1)(1,1,1)[12]             : AIC=126.643, Time=1.50 sec\n",
+      " ARIMA(1,1,2)(1,1,1)[12]             : AIC=126.964, Time=1.31 sec\n",
+      " ARIMA(0,1,0)(1,1,1)[12]             : AIC=240.893, Time=0.37 sec\n",
+      " ARIMA(0,1,2)(1,1,1)[12]             : AIC=146.988, Time=0.81 sec\n",
+      " ARIMA(2,1,0)(1,1,1)[12]             : AIC=131.613, Time=0.78 sec\n",
+      " ARIMA(2,1,2)(1,1,1)[12]             : AIC=125.851, Time=1.70 sec\n",
+      " ARIMA(2,1,2)(0,1,1)[12]             : AIC=126.079, Time=1.25 sec\n",
+      " ARIMA(2,1,2)(1,1,0)[12]             : AIC=126.055, Time=1.07 sec\n",
+      " ARIMA(2,1,2)(2,1,1)[12]             : AIC=127.759, Time=4.41 sec\n",
+      " ARIMA(2,1,2)(1,1,2)[12]             : AIC=inf, Time=6.47 sec\n",
+      " ARIMA(2,1,2)(0,1,0)[12]             : AIC=128.537, Time=0.42 sec\n",
+      " ARIMA(2,1,2)(0,1,2)[12]             : AIC=124.145, Time=4.84 sec\n",
+      " ARIMA(1,1,2)(0,1,2)[12]             : AIC=127.769, Time=3.17 sec\n",
+      " ARIMA(2,1,1)(0,1,2)[12]             : AIC=127.166, Time=4.28 sec\n",
+      " ARIMA(3,1,2)(0,1,2)[12]             : AIC=115.650, Time=5.57 sec\n",
       " ARIMA(3,1,2)(0,1,1)[12]             : AIC=119.344, Time=1.08 sec\n",
-      " ARIMA(3,1,2)(1,1,2)[12]             : AIC=inf, Time=6.61 sec\n",
-      " ARIMA(3,1,2)(1,1,1)[12]             : AIC=120.100, Time=1.76 sec\n",
-      " ARIMA(3,1,1)(0,1,2)[12]             : AIC=124.510, Time=3.96 sec\n",
-      " ARIMA(3,1,3)(0,1,2)[12]             : AIC=inf, Time=6.63 sec\n",
-      " ARIMA(2,1,3)(0,1,2)[12]             : AIC=inf, Time=7.31 sec\n",
-      " ARIMA(3,1,2)(0,1,2)[12] intercept   : AIC=118.944, Time=5.96 sec\n",
+      " ARIMA(3,1,2)(1,1,2)[12]             : AIC=inf, Time=6.43 sec\n",
+      " ARIMA(3,1,2)(1,1,1)[12]             : AIC=120.100, Time=1.87 sec\n",
+      " ARIMA(3,1,1)(0,1,2)[12]             : AIC=124.510, Time=4.31 sec\n",
+      " ARIMA(3,1,3)(0,1,2)[12]             : AIC=inf, Time=6.71 sec\n",
+      " ARIMA(2,1,3)(0,1,2)[12]             : AIC=inf, Time=7.63 sec\n",
+      " ARIMA(3,1,2)(0,1,2)[12] intercept   : AIC=118.944, Time=6.34 sec\n",
       "\n",
       "Best model:  ARIMA(3,1,2)(0,1,2)[12]          \n",
-      "Total fit time: 87.392 seconds\n"
+      "Total fit time: 93.643 seconds\n"
      ]
     }
    ],
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
        "115.6501828073955"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,22 +1002,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 138,
    "metadata": {
     "_uuid": "5ed3733e9230b1b04589390c78b8fa40f1820c1d"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Bora\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
-      "  self._init_dates(dates, freq)\n",
-      "c:\\Users\\Bora\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
-      "  self._init_dates(dates, freq)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Import Sarima Model\n",
     "import statsmodels.api as sm\n",
@@ -1033,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 139,
    "metadata": {
     "_uuid": "260d0b06c4e7af966f9c47848c6c9b157483adf6"
    },
@@ -1056,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 140,
    "metadata": {
     "_uuid": "7a2ddde78516dd5cb345b178c82ac86661c24ade"
    },
@@ -1069,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 141,
    "metadata": {
     "_uuid": "bc82f154ef40d32a4b36adb575d337488daebb40"
    },
@@ -1201,7 +1190,7 @@
        "2022-04-01    40.735590    41.900560  41.318075  42.303279 -2.328907"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 142,
    "metadata": {
     "_uuid": "ec4e81fbd011ebb9627b55021f34def043bbd571"
    },
@@ -1250,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 143,
    "metadata": {
     "_uuid": "09f64b4d4b2469c644ceb184b4bc7083ead3f95e"
    },
@@ -1265,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 144,
    "metadata": {
     "_uuid": "0c2c4e4076afcc35d08f3a580eec33f13e7f9194"
    },
@@ -1298,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 145,
    "metadata": {
     "_uuid": "d9200ba3a668e1c678dad5d4e87ffe60913cb339"
    },
@@ -1457,7 +1446,7 @@
        "2023-12-01   187.661209   228.738616"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 146,
    "metadata": {
     "_uuid": "ee44482ee5e80d50b273bcfcec4c539abbf5403c"
    },
@@ -1480,7 +1469,7 @@
        "Text(0.5, 1.0, 'Average Food Prices(₺)')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1505,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 147,
    "metadata": {
     "_uuid": "c56df6f994146c17abe227f2c0df2c8157b18f11"
    },
@@ -1516,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 148,
    "metadata": {
     "_uuid": "ab2b3dd44a2f29bd0f5ce37910f7f9e626a2503b"
    },
@@ -1547,7 +1536,7 @@
        "Freq: MS, Name: Mean, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 149,
    "metadata": {
     "_uuid": "8fb5eee407f2c517c36c599934d94f5879310341"
    },
@@ -1570,7 +1559,7 @@
        "Text(0.5, 1.0, 'Average Food Prices(₺) Prediction for next 24 months')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1595,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1604,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1687,7 @@
        "[184 rows x 1 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1716,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1811,7 @@
        "[184 rows x 2 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1925,7 @@
        "[184 rows x 1 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1954,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2037,7 @@
        "[232 rows x 1 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2152,7 @@
        "[184 rows x 1 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2182,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -2276,7 +2265,7 @@
        "[232 rows x 1 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2293,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -2392,7 +2381,7 @@
        "[184 rows x 1 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2410,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2493,7 @@
        "[232 rows x 1 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2521,7 +2510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -2615,7 +2604,7 @@
        "[184 rows x 1 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2634,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2722,7 @@
        "[184 rows x 1 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2751,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2845,7 +2834,7 @@
        "[184 rows x 1 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2866,7 +2855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -2879,7 +2868,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.981\n",
       "Method:                 Least Squares   F-statistic:                     2116.\n",
       "Date:                Sat, 14 Oct 2023   Prob (F-statistic):          2.40e-137\n",
-      "Time:                        17:32:32   Log-Likelihood:                -230.96\n",
+      "Time:                        17:37:15   Log-Likelihood:                -230.96\n",
       "No. Observations:                 165   AIC:                             471.9\n",
       "Df Residuals:                     160   BIC:                             487.4\n",
       "Df Model:                           4                                         \n",
@@ -2923,16 +2912,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f9b0a08f10>"
+       "<matplotlib.legend.Legend at 0x1f9aa700b90>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     },
